# qdrant_hackathon

./: README.md  __init__.py  app.py  check_payload.py  clip_processor.py  config.py  debug_qdrant.py  debug_tags.py  image_processor.py  main.py  ollama_client.py  pyproject.toml  qdrant_manager.py  simple_test.py  test_fix.py  test_gps_processing.py  test_search_fix.py  test_with_data.py  utils.py
